--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="https://www.google.com">About</a>
+          <a class="nav-link" href="index.html">About</a>
         </li>
         <li class="navbar-item active">
-          <a class="nav-link">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="navbar-item active">
-          <a class="nav-link">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -50,20 +50,23 @@
           <header>  
             <div class="pt-lg-5 bg-white"> <h1 class="display-4"><strong>Hi, I'm Rayhana.</strong></h1></div>
            </header>
+           <p></p>
            <h2><small>Digital Marketing Manager with over five years of experience and a Web Developer-in training based out of Arlington, Virginia. I help clients improve their online reputation and web presence.</small></h2>
 
         </div>
-        <div class="col-5">
-          <div class="pt-lg-5 bg-white"></div>
-          <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <p class="card-text"><img src="file:///C:/Users/15854/Coding%20Bootcamp/Homework/homework-two/assets/rayhana-250.png" class="rounded float-left"></p>
-
+        <div class="col-5"><p></p>
+          <div class="pt-lg-5 bg-white">
+          <img src="./assets//rayhana-250.png" class="rounded float-left">
+            </div>
         </div>
       </div>
       </div> 
     </div>
 
+
+
     </body>
  
+
+
 </html>
