--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
  <!-- Navbar content -->
       <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #900C3F;">
-      <a class="navbar-brand" href="#"><strong>Rayhana Fazily</strong></a>
+      <a class="navbar-brand" href="index.html"><strong>Rayhana Fazily</strong></a>
   
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
