updated fatbeats to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,8 +64,8 @@
           </div>
     
           <div class="col-lg-4">
-            <div class="shadow p-3 mb-3 bg-white rounded"> <img class="img thumbnail center-block" src="assets/website-one.png" alt="screenshot of tall buildings website homepage" width="100%"></div>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, maiores, quos. At, animi, facilis. Alias itaque ab minima rerum, eaque animi nesciunt harum nemo est cumque voluptas, qui reprehenderit atque.Alias itaque ab minima rerum, eaque animi nesciunt harum nemo est cumque voluptas, qui reprehenderit atque.</p>
+            <div class="shadow p-3 mb-3 bg-white rounded"> <img class="img thumbnail center-block" src="assets/fat-beats-Project1.png" alt="screenshot of fatbeats project site" width="100%"></div>
+            <p> Fatbeats is a team project I worked on as a part of my coding education. The site is intended to offer a suggestions to someone planning a musical experience in the DC area. It begins with selecting a genre of music, locating nearby events associated to that genre, then finding local food options near the event you have selected. </p>
           </div>
 
           <div class="col-lg-4">
