updated portfolio with project 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,10 +69,10 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="shadow p-3 mb-3 bg-white rounded"> <img class="img thumbnail center-block" src="assets/website-two.png" alt="hair salon website image" width="100%"> </div>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, maiores, quos. At, animi, facilis. Alias itaque ab minima rerum, eaque animi nesciunt harum nemo est cumque voluptas, qui reprehenderit atque. Alias itaque ab minima rerum, eaque animi nesciunt harum nemo est cumque voluptas, qui reprehenderit atque.</p>
+            <div class="shadow p-3 mb-3 bg-white rounded"> <a href="https://pure-mountain-23490.herokuapp.com" target="_blank"><img class="img thumbnail center-block" src="assets/project2-travelwishlist.png" alt="screenshot of destination app project site" width="100%"></a> </div>
+            <p> This is a destination app created as a part of a team project in my coding course. We have created a travel planning app that allows a user to search a desired city they would like to visit, and add it to a ‘travel wish list’ or an ‘already visited list’. As the user updates their wish list, they can also move these items from the wish list, to the ‘already visited’ list.
+              </p>
           </div>
-
         </div>
   </div>
       </div>
